# FluETL

./: .env.default  .env.test  .env.unit.test  .gitignore  Cargo.toml  diesel.toml  log4rs.yml  readme.md
.github/workflows/: build.yml  release.yml  tag.yml  test.yml  tests.yml
benches/: upsert_benchmark.rs
migrations/2023-08-10-164933_create_table/: down.sql  up.sql
migrations/2023-08-10-164933_create_target_tables/: down.sql  up.sql
migrations/2023-08-17-214553_create_legacy_staging_tables/: down.sql
migrations/2023-08-17-214553_staging_customer/: down.sql  up.sql
src/: Infrastructure.rs  application.rs  domain.rs  fixtures.rs  infrastructure.rs  lib.rs  main.rs  use_cases.rs
src/Infrastructure/: converters.old  converters.rs  csv_reader.rs  database.rs  date_format.rs  db_writer.rs  environment.rs  logger.rs
src/Infrastructure/csv_reader/: delivery_slip.rs  invoice.rs  order.rs  order_line.rs
src/Infrastructure/database/: batch.rs  connection.rs  models.rs  schema.rs
src/adapters/: mappers.rs
src/adapters/mappers/: mapping_client.rs  order.rs
src/application/: use_cases.rs
src/application/use_cases/: import_mapping_client.rs  import_orders.rs
src/domain/: delivery_slip.rs  invoice.rs  language.rs  mapping_client.rs  new_type.rs  order.rs  order_line.rs  product.rs  vo.rs
src/domain/dto/: date_dto.rs  mod.rs
src/domain/new_type/: filled_string.rs  id.rs  mod.rs
src/domain/vo/: completion.rs  file_name.rs  locale.rs  localized_item.rs  mod.rs  origin.rs  price.rs  status.rs  tracking_link.rs
src/infrastructure/: csv_reader.rs  data_source.rs  logger.rs  repository.rs
src/infrastructure/csv_reader/: delivery_slip.rs  invoice.rs  mapping_client.rs  order.rs  order_line.rs  product.rs
src/infrastructure/database/: batch.rs  connection.rs  (+1 more)
src/interface_adapters/: cli.rs  mappers.rs  mod.rs
src/tests/: common.rs  fixtures.rs
src/use_cases/: clear_product.rs  import_delivery_slip.rs  import_invoice.rs  import_mapping_client.rs  import_order.rs  import_order_line.rs  import_order_lines.rs  import_orders.rs  import_product.rs
tests/: cli.rs
tests/cli_sub_routines/: delivery_slip.rs  invoice.rs  mapping_client.rs  mod.rs  order.rs  order_line.rs
tests/fixtures/: delivery_slip_for_unit_test.csv  delivery_slips.csv  invoice_document_types.csv  invoice_document_types_for_unit_test.csv  invoice_for_unit_test.csv  invoice_lang.csv  invoice_lang_for_unit_test.csv  invoices.csv  languages.sql  mapping_client_source.sql  order.csv  order_for_unit_test.csv  order_lines.csv  order_lines_for_unit_test.csv  order_lines_items.csv  order_lines_items_for_unit_test.csv  orders.csv
(+35 files in other folders)
