[package]
name = "idempiere-data-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = "4.3.21"
csv = "1.2.2"
diesel = { version = "2.1.0", features = ["mysql","chrono","r2d2"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
serde = { version = "1.0.183", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
diesel_migrations = { version = "2.1.0", features = ["mysql"] }
tempfile = "3.7.1"

[[bench]]
name = "upsert_benchmark"
harness = false